fix(integration): align endpoints
